[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
# ark-bn254 = { path = "../ark-curves/bn254", default-features = false, features = ["curve"] }
# ark-ec = { path = "../ark-algebra/ec", default-features = false }
# ark-ff = { path = "../ark-algebra/ff", default-features = false }

crypto-bigint = { version = "0.5.5-risczero.0", default-features=false }
ff = { version = "0.13.0", default-features = false }
halo2curves = { version = "0.6.1", default-features = false }

[patch.crates-io.crypto-bigint]
git = "https://github.com/risc0/RustCrypto-crypto-bigint"
tag = "v0.5.5-risczero.0"

# [patch.crates-io]
# ark-ff = { path = "../ark-algebra/ff" }
# ark-poly = { path = "../ark-algebra/poly" }
# ark-ec = { path = "../ark-algebra/ec" }
# ark-bn254 = { path = "../ark-curves/bn254" }
