[package]
name = "test-jolt"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["guest"]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["std"] }
# jolt-sdk = { path = "../../jolt/jolt-sdk", features = ["std"] }
guest = { path = "./guest" }
shared = { path = "../shared" }
ark-bn254 = "0.4.0"
rand = "0.8.5"
ark-ff = "0.4.2"
ark-ec = "0.4.2"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
# ahash = { git = "https://github.com/nebrazkp/ahash", branch = "jolt" }
ahash = { path = "../ahash" }
