[workspace]
resolver = "2"
members = [ "host", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[patch.crates-io.crypto-bigint]
git = "https://github.com/risc0/RustCrypto-crypto-bigint"
tag = "v0.5.5-risczero.0"

# [patch.crates-io]
# ark-ff = { path = "../ark-algebra/ff" }
# ark-poly = { path = "../ark-algebra/poly" }
# ark-ec = { path = "../ark-algebra/ec" }
# ark-bn254 = { path = "../ark-curves/bn254" }
