[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
ark-bn254 = "0.4.0"
rand = "0.8.5"
ark-ff = "0.4.2"
ark-ec = "0.4.2"

[features]
default = [ ]
metal = [ "risc0-zkvm/metal" ]
