[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "0.21.0" }

[package.metadata.risc0]
methods = ["guest"]

# [patch.crates-io]
# ark-ff = { path = "../../ark-algebra/ff" }
# ark-poly = { path = "../../ark-algebra/poly" }
# ark-ec = { path = "../../ark-algebra/ec" }
# ark-bn254 = { path = "../../ark-curves/bn254" }
