[workspace]
[package]
version = "0.1.0"
name = "test-sp1-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
shared = { path = "../../nebra0/shared" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }