[package]
name = "nebra0_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
[profile.release]
opt-level = 3
[profile.bench]
opt-level = 3


[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
shared = { path = "../../../shared" }
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false, features = ["std"] }
ark-std = { version = "0.4.0", default-features=false }
crypto-bigint = { version = " 0.5.5-risczero.0", default-features=false }

[patch.crates-io.crypto-bigint]
git = "https://github.com/risc0/RustCrypto-crypto-bigint"
tag = "v0.5.5-risczero.0"
