[package]
name = "nebra0_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
[profile.release]
opt-level = 3
[profile.bench]
opt-level = 3


[dependencies]
ark-bn254 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
shared = { path = "../../../shared" }
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false, features = ["std"] }
# ark-std = { version = "0.4.0", default-features=false }
crypto-bigint = { version = " 0.5.5-risczero.0", default-features=false }

[patch.crates-io.crypto-bigint]
git = "https://github.com/risc0/RustCrypto-crypto-bigint"
tag = "v0.5.5-risczero.0"

[patch.crates-io]
ark-ff = { path = "../../../ark-algebra/ff" }
ark-poly = { path = "../../../ark-algebra/poly" }
ark-ec = { path = "../../../ark-algebra/ec" }
